<resources>
    <string name="app_name">Car Rental</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Search_for_a_car">Find a car</string>
    <string name="Rating_App">Rating App</string>
    <string name="Share_app">Share app</string>
    <string name="Feedback">Feedback</string>
    <string name="accessToInfo">Privacy Policy</string>
    <string name="SignUps">Sign Up </string>
    <string name="aboutUs">About Us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_text">ahme</string>
    <string name="snackbar_text">name</string>
    <string name="action_show">Show</string>
    <string name="some_text">some_text</string>
    <string name="sss">some_text</string>
    <string name="privacypolicytext">This legal notice applies to the entire contents of this booking engine.
        Please take some time to read these Terms and Conditions of Use (‘Terms of Use’) as by using this booking engine you indicate your acceptance of these Terms of Use regardless of whether or not you choose to register with us. If you do not accept these terms, do not use this booking engine.
                   By using any part of the booking engine, you shall be deemed to have accepted this legal notice in full. Stop using this booking engine immediately if you do not accept and agree to be bound by the terms of use.

This booking engine is powered by CarTrawler’s technology and allows you to use CarTrawler’s technology to book car rental services from third part car rental suppliers. By accepting the Terms of Use and/or using any part of this booking engine, you agree to conduct your use of this booking engine and the technology supporting it and provided on this booking engine in accordance with the Terms of Use and that the Terms of Use are an agreement between CarTrawler and you.

CarTrawler may revise this legal notice at any time by updating this posting. You should check the booking engine from time to time to review the then current legal notice, because it is binding on you. Certain provisions of this legal notice may be superseded by expressly designated legal notices or terms located on particular pages at the booking engine.

All references to booking engine in these Terms of Use are deemed to include reference to all bookings made through CarTrawler’s call centre.
    By using this booking engine you confirm that you are of sufficient legal age to use this booking engine and create binding legal obligations for any liability you may incur as a result of the use of this booking engine. In using this booking engine you understand that you are responsible, financially and otherwise, for all uses of this booking engine by you and those using your login information. CarTrawler recommend you protect your login information.</string>
</resources>